# ros-driver_tcpip

./: .gitignore  CMakeLists.txt  README.md  doxyfile  driver_modem.pro  package.xml
driver_modem/: CMakeLists.txt  doxyfile  package.xml
driver_modem/include/driver_modem/: modem_interface.h  tcp_role.h
driver_modem/src/: driver.cpp  driver.h  modem_interface.cpp  ros_node.cpp  ros_node.h  tcp_connection.h
driver_modem_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
driver_modem_msgs/msg/: active_connections.msg  data_packet.msg
driver_modem_msgs/srv/: add_tcp_connection.srv  get_remote_host.srv  send_tcp.srv
include/driver_modem/: modem_interface.h  modem_interface.hpp  protocol.h  tcp_role.h
msg/: ActiveConnections.msg  DataPacket.msg
src/: connection_type.h  driver.cpp  driver.h  driver_modem.cpp  driver_modem.hpp  driver_tcpip.cpp  driver_tcpip.hpp  endpoint.cpp  endpoint.hpp  main.cpp  modem_interface.cpp  protocol.h  protocol.hpp  ros_node.cpp  ros_node.h  socket.cpp  socket.hpp  tcp_client.cpp  tcp_client.hpp  tcp_connection.cpp  tcp_connection.h  tcp_role.h  tcp_server.cpp  tcp_server.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_connection.cpp  udp_connection.h  udp_socket.cpp  udp_socket.hpp
srv/: AddUDPConnection.srv  ModifyConnection.srv  RemoveAllConnections.srv  RemoveConnection.srv  SendTCP.srv  SetRemoteHost.srv  TCPtx.srv
