<?xml version="1.0"?>
<package format="2">

  <name>driver_modem</name>
  <version>1.0.0</version>
  <description>A ROS driver for TCP/IP network communication external to ROS.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>driver_modem_msgs</depend>

</package>
